objects/Territory_Rule_Criteria_Value__c.object
<CustomObject>
    <description>This object stores the value for territory Rule Criteria</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Sensitive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Sensitive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country code to save country code from Custom meta data Type.</description>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_LongName__c</fullName>
        <label>Country LongName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_High__c</fullName>
        <description>Store the high postal code of a area.</description>
        <label>Postal Code High</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Low__c</fullName>
        <description>Store the lower postal code of the country.</description>
        <label>Postal Code Low</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>Store the score for the criteria value.</description>
        <label>Additional Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>This is a picklist field contains a value for territory Rule Criteria</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_LongName__c</fullName>
        <label>State LongName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Rule_Criteria__c</fullName>
        <description>This field used for Master detail relationship with Territory Rule Criteria</description>
        <label>Territory Rule Criteria</label>
        <referenceTo>Territory_Rule_Criteria__c</referenceTo>
        <relationshipName>Territory_Rule_Criteria_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Territory_Value__c</fullName>
        <description>Prevent duplicate rule entries for territory, rule, criteria and value
should be a unique value but we are not enforcing uniqueness as of 7/2016 because we know we have a lot of data to clean up before we can enforce uniqueness</description>
        <label>Unique Territory Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Criteria Value</label>
    <nameField>
        <displayFormat>TRCV-{0000}</displayFormat>
        <label>Territory Rule Criteria Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Score_Value_Should_be_in_Range_Of_1to200</fullName>
        <active>true</active>
        <description>Prevent Score value to get exceed by 200.</description>
        <errorConditionFormula>IF(NOT(ISBLANK(Score__c)),NOT(AND(Score__c &gt;= 1, Score__c &lt;= 200)),False)</errorConditionFormula>
        <errorDisplayField>Score__c</errorDisplayField>
        <errorMessage>Score value should be in between 1-200.</errorMessage>
    </validationRules>
</CustomObject>